fix: fixed overflowing for webhook and other steps when editing

--- a/packages/frontend/src/app/modules/flow-builder/page/flow-builder/collection-builder.component.scss
+++ b/packages/frontend/src/app/modules/flow-builder/page/flow-builder/collection-builder.component.scss
@@ -122,3 +122,11 @@ mat-drawer[position=start]{
   z-index: 9999;
   text-align: center;
 }
+
+.right-side-bar-container
+{
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+}
